- Docstring everywhere - Open, close positions - Display open positions - Dataset time fixed

--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -32,17 +32,22 @@
         
     </div>
     
-    <button id="reset-time">Reset Chart</button>
-    <h3 id="balance">Balance: </h3>
+    <button id="reset">Reset</button>
+    <h3 id="balance"></h3>
+    <h3 id="equity"></h3>
 
     <form name="position-form">
         Type: <input type="text" name="type">
-        Size: <input type="number" step="0.01" name="size">
         Pair: <input type="text" name="pair">
         TP: <input type="number" step="0.00001" name="tp">
         SL: <input type="number" step="0.00001" name="sl">
-        <button id="open-position" type="button" >Open Position</button>
+        <button id="open-position" type="button">Open Position</button>
     </form>
+
+
+    <div class="positions" id="open-positions"></div>
+
+
 
     <script type="module" src="/Frontend/js/broker.js"></script>
     <script type="module" src="/Frontend/js/chart.js"></script> 
